# Devextreme

./: .gitignore  CMakeLists.txt  README.md  collect.py  convert (to cpp).py  convert (to npz).py  example.py  info.rc  plotting.py  speeding.py
develop/: README.md  pycex.c  pycex.py
develop/core/: interp.cpp  interp.hpp  interp.py
develop/hello/: pycex.h
example/: medium.py  sayhello.py  simple.py
example/notebook/: 3_5_1_1.npz  3_5_1_2.npz  3_5_1_3.npz  3_5_1_4.npz  3_5_1_5.npz  3_5_2_1.npz  3_5_2_2.npz  3_5_2_3.npz  3_5_2_4.npz  3_5_3_1.npz  3_5_3_2.npz  3_5_3_3.npz  3_5_3_4.npz  3_5_4_1.npz  3_5_4_2.npz  3_5_4_3.npz  3_5_4_4.npz  Plotting.ipynb
lebedev/: __init__.py  lebedev.py  wrapper.py
lebedev/core/: interp.cpp  interp.hpp
lebedev/source/: graph.hpp  graph_3_13.cpp  graph_3_2.cpp  graph_3_2.hpp  graph_3_21.cpp  graph_3_22.cpp  graph_3_25.cpp  graph_3_28.cpp  graph_3_29.cpp  graph_3_3.cpp  graph_3_32.cpp  graph_3_35.cpp  graph_3_4.cpp  graph_3_5.cpp  graph_4_10.cpp  graph_4_11.cpp  graph_4_12.cpp  graph_4_13.cpp  graph_4_15.cpp  graph_4_2.cpp  graph_4_24.cpp  graph_4_27.cpp  graph_4_28.cpp  graph_4_29.cpp  graph_4_3.cpp  graph_4_30.cpp  graph_4_32.cpp  graph_4_34.cpp  graph_4_35.cpp  graph_4_36.cpp  graph_4_38.cpp  graph_4_40.cpp  graph_4_42.cpp  graph_4_43.cpp  graph_4_5.cpp  graph_4_8.cpp  graph_4_9.cpp  graph_5_11.cpp  graph_5_11.hpp  graph_5_7.cpp  (+2 more)
